# api

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml
crates/plugin-api/: Cargo.toml
crates/plugin-api/examples/: info-plugin.rs  logo-animation-plugin.rs
crates/plugin-api/src/: entrypoints.rs  error.rs  io.rs  lib.rs  protocol.rs
docs/: README.md  examples.md  getting-started.md  plugin-sdk.md  protocol.md
