[package]
name = "xfetch-plugin-api"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared plugin protocol types and IO helpers for xfetch"
repository = "https://github.com/xfetch-cli/api"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
